--- a/TreatShop/Views/Accounts/Index.cshtml
+++ b/TreatShop/Views/Accounts/Index.cshtml
@@ -6,7 +6,7 @@
 @if (User.Identity.IsAuthenticated)
 {
     <p>Hello @User.Identity.Name!</p>
-    @using (Html.BeginForm("LogOff", "Account"))
+    @using (Html.BeginForm("LogOff", "Accounts"))
     {
         <input type="submit" value="Log out" />
     }
@@ -14,8 +14,8 @@
 
 else
 {
-<p>@Html.ActionLink("Register", "Register")</p>
-<p>@Html.ActionLink("Log in", "Login")</p>
+    <p>@Html.ActionLink("Register", "Register")</p>
+    <p>@Html.ActionLink("Log in", "Login", "Accounts")</p>
 }
 <hr>
 <p>@Html.ActionLink("Home", "Index", "Home")</p>
