--- a/TreatShop/Views/Accounts/Register.cshtml
+++ b/TreatShop/Views/Accounts/Register.cshtml
@@ -12,17 +12,24 @@
     @Html.ValidationSummary("Please fix the following error(s) and then resubmit the form:")
 }
 
-@using (Html.BeginForm("Register", "Account", FormMethod.Post))
+@using (Html.BeginForm("Register", "Accounts", FormMethod.Post))
 {
+    <div class="form-group">
     @Html.LabelFor(user =>user.UserName)
     @Html.TextBoxFor(user => user.UserName)
+    </div>
+    <div class="form-group">
     @Html.LabelFor(user => user.Email)
     @Html.TextBoxFor(user => user.Email)
+    </div>
+    <div class="form-group">
     @Html.LabelFor(user => user.Password)
     @Html.EditorFor(user => user.Password)
+    </div>
+    <div class="form-group">
     @Html.LabelFor(user => user.ConfirmPassword)
     @Html.EditorFor(user => user.ConfirmPassword)
-
+    </div>
     <input type="Submit" value="Register">
 }
 <hr>
