--- a/TreatShop/Views/Accounts/Register.cshtml
+++ b/TreatShop/Views/Accounts/Register.cshtml
@@ -34,6 +34,6 @@
 }
 <hr>
 
-<@Html.ActionLink("Back to accounts page", "Index")>
+@Html.ActionLink("Back to accounts page", "Index")
 <p>@Html.ActionLink("Back to Home", "Index", "Home")</p>
 </div>
