--- a/TreatShop/Views/Home/Index.cshtml
+++ b/TreatShop/Views/Home/Index.cshtml
@@ -1,49 +1,62 @@
 ﻿@{
-    Layout = "_Layout";
+  Layout = "_Layout";
 }
 
 <div class="text-center">
-    @using TreatShop.Models;
-    @if (User.Identity.IsAuthenticated)
-    {
-        <h1>Hello @User.Identity.Name! Welcome to Pierre's Sweet and Savory Treats.</h1>
-    }
-    else
-    {
-        <h1>Welcome to Pierre's Sweet and Savory Treats</h1>
-    }
+  @using TreatShop.Models;
+  @if (User.Identity.IsAuthenticated)
+  {
 
-    <h1>List of Available Treats:</h1>
-
-    @if (ViewBag.Treats == null || ViewBag.Treats.Count == 0)
-{
-    <h3>No treats have been added yet.</h3>
-} 
-else
-{
-  <ul>
-    @foreach (Treat treat in ViewBag.Treats)
-    {
-      <li>@Html.ActionLink($"{treat.Description}", "Details", "Treats", new { id = treat.TreatId }, null)</li>
-    }
-  </ul>
-}
-<h1>List of Available Flavors:</h1>
-
-@if (ViewBag.Flavors == null ||ViewBag.Flavors.Count == 0)
-{
-  <h3>No flavors have been added yet.</h3>
-} 
-else
-{
-  <ul>
-    @foreach (Flavor flavor in ViewBag.Flavors)
-    {
-      <li>@Html.ActionLink($"{flavor.Profile}", "Details", "Flavors", new { id = flavor.FlavorId }, null)</li>
-    }
-  </ul>
-}
+    <h1>Hello @User.Identity.Name! Welcome to Pierre's Sweet and Savory Treats.</h1>
+  }
+  else
+  {
+    <h1>Welcome to Pierre's Sweet and Savory Treats</h1>
+  }
 <hr>
+  <h1>List of Available Treats:</h1>
+  
+
+  @if (ViewBag.Treats == null || ViewBag.Treats.Count == 0)
+  {
+    <h3>No treats have been added yet.</h3>
+  }
+  else
+  {
+    <h3> * Click on the treat to see what flavors it comes in *</h3>
+    <ul>
+      @foreach (Treat treat in ViewBag.Treats)
+      {
+        <li>@Html.ActionLink($"{treat.Description}", "Details", "Treats", new { id = treat.TreatId }, null)</li>
+      }
+    </ul>
+  }
+  <hr>
+  <h1>List of Available Flavors:</h1>
+
+  @if (ViewBag.Flavors == null || ViewBag.Flavors.Count == 0)
+  {
+    <h3>No flavors have been added yet.</h3>
+  }
+  else
+  {
+    <h3> * Click on the flavor to see what treats are available in that flavor *</h3>
+
+    <ul>
+      @foreach (Flavor flavor in ViewBag.Flavors)
+      {
+        <li>@Html.ActionLink($"{flavor.Profile}", "Details", "Flavors", new { id = flavor.FlavorId }, null)</li>
+      }
+    </ul>
+  }
+  <hr>
+  @if (User.Identity.IsAuthenticated)
+  {
+    @using (Html.BeginForm("LogOff", "Accounts"))
+    {
+      <input type="submit" value="Log out @User.Identity.Name" />
+    }
+  }
   <p>@Html.ActionLink("Create or manage an account", "Index", "Accounts")</p>
 
 
