Add create to controllers and views, WIP getting newly created treats to show on splash page.

--- a/TreatShop/Views/Accounts/Index.cshtml
+++ b/TreatShop/Views/Accounts/Index.cshtml
@@ -18,4 +18,4 @@ else
     <p>@Html.ActionLink("Log in", "Login", "Accounts")</p>
 }
 <hr>
-<p>@Html.ActionLink("Home", "Index", "Home")</p>
+<p>@Html.ActionLink("Back to Main page", "Index", "Home")</p>
