--- a/TreatShop/Views/Treats/Create.cshtml
+++ b/TreatShop/Views/Treats/Create.cshtml
@@ -20,5 +20,5 @@
   <input type="submit" value="Add treat type">
 }
 <hr>
-<p>@Html.ActionLink("Back to Main Page", "Index")</p>
+<p>@Html.ActionLink("Back to Main Page", "Index", "Home")</p>
 
