--- a/TreatShop/Views/Treats/Details.cshtml
+++ b/TreatShop/Views/Treats/Details.cshtml
@@ -5,40 +5,41 @@
 @using TreatShop.Models
 @model TreatShop.Models.Treat
 
-  <h1>Treat Details:</h1>
+<h1>Treat Details:</h1>
 
-  <h2> @Html.DisplayFor(model => model.Description)</h2>
-      <hr>
-      @if (@Model.JoinEntities.Count == 0)
-      {
-        <p>This treat does not come in any flavors yet!</p>
-      }
-      else
-      {
-        <h4>Available flavors:</h4>
+<h2> @Html.DisplayFor(model => model.Description)</h2>
+<p>@Html.ActionLink("Delete Treat ", "Delete", new {id = Model.TreatId})</p>
+<hr>
+@if (@Model.JoinEntities.Count == 0)
+{
+  <p>This treat does not come in any flavors yet!</p>
+}
+else
+{
+  <h4>Available flavors:</h4>
 
-        @foreach (TreatFlavor join in Model.JoinEntities)
-        {
-          <h5>@join.Flavor.Profile
-            @using (Html.BeginForm("DeleteJoin", "Treat"))
-            {
-              @Html.Hidden("joinId", @join.TreatFlavorId)
-              <input type="submit" value="Delete" />
-            }
-          </h5>
-        }
+  @foreach (TreatFlavor join in Model.JoinEntities)
+  {
+    <ul>
+  <li>@join.Flavor.Profile </li>
+    </ul>
+    
+  }
 
-      }
-      @* @using (Html.BeginForm("AddFlavor", "Treats"))
-      {
-        @Html.HiddenFor(model => model.TreatId)
-        @Html.Label("Select an Flavor")
-        @Html.DropDownList("FlavorId")
+}
 
-        <input type="submit" value="Add New Flavor" />
-      } *@
-      <hr>
-      <p>@Html.ActionLink("Back to Main Page", "Index", "Home")</p>
-      <p>@Html.ActionLink("Edit Treat", "Edit", new {id = Model.TreatId})</p>
-      <p>@Html.ActionLink("Delete Treat ", "Delete", new {id = Model.TreatId})</p>
+<h4>Add a flavor:</h4>
+@using (Html.BeginForm("AddFlavor", "Treats"))
+{
+  @Html.HiddenFor(model => model.TreatId)
+  @Html.Label("Select a Flavor")
+  @Html.DropDownList("FlavorId", ViewBag.FlavorId as SelectList, "Select a Flavor", new { @class = "form-control" })
+
+  <button type="submit" class="btn btn-primary">Add Flavor</button>
+}
+
+<hr>
+<p>@Html.ActionLink("Back to Main Page", "Index", "Home")</p>
+<p>@Html.ActionLink("Edit Treat", "Edit", new {id = Model.TreatId})</p>
+
 </div>
