--- a/TreatShop/Views/Treats/Edit.cshtml
+++ b/TreatShop/Views/Treats/Edit.cshtml
@@ -25,4 +25,4 @@
   <input type="submit" value="Save" />
 }
 
-<p>@Html.ActionLink("Back to home page", "Index")</p>
+<p>@Html.ActionLink("Back to home page", "Index", "Home")</p>
