--- a/TreatShop/Views/Flavors/Details.cshtml
+++ b/TreatShop/Views/Flavors/Details.cshtml
@@ -1,4 +1,4 @@
- @{
+@{
   Layout = "_Layout";
 }
 
@@ -19,25 +19,23 @@ else
 
   @foreach (TreatFlavor join in Model.JoinEntities)
   {
-    <h5>@join.Treat.Description
-  @using (Html.BeginForm("DeleteJoin", "Flavor"))
-      {
-        @Html.Hidden("joinId", @join.TreatFlavorId)
-        <input type="submit" value="Delete" />
-      }
-    </h5>
+  <ul>
+  <li>@join.Treat.Description </li>
+  </ul>
+
   }
 }
-@* 
- @using (Html.BeginForm("AddFlavor", "Treats"))
+<h4>Add a treat:</h4>
+@using (Html.BeginForm("AddTreat", "Flavors"))
 {
-@Html.HiddenFor(model => model.TreatId)
-@Html.Label("Select an Flavor")
-@Html.DropDownList("FlavorId")
+  @Html.HiddenFor(model => model.FlavorId)
+  @Html.Label("Select a Treat")
+  @Html.DropDownList("TreatId", ViewBag.TreatId as SelectList, "Select a Treat", new { @class = "form-control" })
 
-<input type="submit" value="Add New Flavor" />
-}  *@
+  <button type="submit" class="btn btn-primary">Add Treat</button>
+}
+
+
+<hr>
 <hr>
 <p>@Html.ActionLink("Back to Main Page", "Index", "Home")</p>
-<p>@Html.ActionLink("Edit Flavor", "Edit", new {id = Model.FlavorId})</p>
-<p>@Html.ActionLink("Delete Flavor ", "Delete", new {id = Model.FlavorId})</p>
